fixed time formatting & workshop image stretch

--- a/workshops.css
+++ b/workshops.css
@@ -54,6 +54,7 @@ main a {
 
 .top-block-wrapper {
     display: flex;
+    align-items: flex-start;
 }
 
 .workshop p{
